@@ -2,6 +2,10 @@ Revision history for Perl extension App-Koyomi
 
 {{$NEXT}}
 
+2015-06-05 v0.3.2  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
+
+    - Feature: koyomi-cli "add" sub-command
+
 2015-06-01 v0.3.1  YASUTAKE Kiyoshi <yasutake.kiyoshi@gmail.com>
 
     - Feature: koyomi-cli - CRUD for job records. Currently "list" and "modify"
